<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerPhoneNumber"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:inputType="number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerPassword"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/et_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
        android:maxLength="20"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerBindPhoneNumber"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/et_connphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:inputType="number"/>
    <!-- 选择查询间隔 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_upinterval"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/et_lag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:text="1"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/register_minute"/>
    </LinearLayout>

    <!-- SOS1:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_sos1"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/et_sos1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="20"
            />
    </LinearLayout>

    <!-- SOS2:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_sos2"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/et_sos2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="20"
            />
    </LinearLayout>

    <!-- SOS3:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_sos3"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/et_sos3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="20"
            />
    </LinearLayout>
    <!-- 电子围栏  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_fence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_eleFence"
            android:background="@color/white_text"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/et_fence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_eleFenceRadius"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/et_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:text="10"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_eleFenceRadiusValue"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerSubmit"
            android:textSize="18sp"
            android:background="@color/white_text"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerClear"
            android:textSize="18sp"
            android:background="@color/white_text"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>